Bug Squash
- Scrollbar visible when not in admin mode. Boo!

--- a/assets/css/chronicles.css
+++ b/assets/css/chronicles.css
@@ -64,7 +64,6 @@ a{
 
 .uleft{
     position:relative;
-    left:5%;
     top:10%;
 }
 .lright{
